src/components/Header/HeaderButtons/HeaderButtons.module.scss
@use "@/styles/mixins" as m;

.headerButtons {
  display: flex;
  gap: 12px;
  align-items: center;
}

@include m.small {
  .headerButtons {
    width: 100%;
  }
}

.headerButtons.notFoundPage {
  position: absolute;
  right: 20px;
  top: 12px;
}

html[lang=ar] .headerButtons.notFoundPage {
  right: auto;
  left: 20px;
}

@include m.small {

  .headerButtons.notFoundPage,
  html[lang=ar] .headerButtons.notFoundPage {
    position: static;
  }
}

.headerButtons>* {
  flex: 1;
}

@include m.large {
  .headerButtons.onlineMode {
    align-items: flex-start;
    gap: 0;
  }

  .headerButtons:not(.onlineMode) {
    flex-direction: column;
  }

  .headerButtons.is404 {
    flex-direction: row;
  }
}

@include m.small {
  .headerButtons {
    align-items: flex-start;
    gap: 8px;
  }

  .headerButtons:not(.onlineMode) {
    flex-direction: column-reverse;
  }
}

@include m.small {
  .headerButtons {
    width: 100%;
    flex-direction: column;
    justify-content: center;
    gap: 10px;
  }

  .headerButtons:not(.onlineMode) {
    flex-direction: column;
  }
}

.headerButtons :where(.wrapper1, .wrapper2) {
  display: flex;
  gap: 12px;
  align-items: center;
}

@media (max-width: 1300px) {
  html:is([lang=ru], [lang=hu], [lang=fr], [lang=ja]) .headerButtons .wrapper1 {
    justify-content: flex-end;
  }
}

@include m.very-small {
  html[lang=fr] .headerButtons .wrapper1 {
    flex-direction: column;
  }
}

.headerButtons .wrapper2 {
  justify-content: flex-end;
}

@include m.medium {
  .headerButtons :where(.wrapper1, .wrapper2) {
    gap: 8px;
  }
}

@include m.small {
  .headerButtons :where(.wrapper1, .wrapper2) {
    width: 100%;
  }
}

@include m.small {
  .headerButtons :where(.wrapper1, .wrapper2) {
    flex-wrap: wrap;
    width: 100%;

    &>*,
    &>*>* {
      flex: 1;
    }
  }
}

.installBtn {
  background: linear-gradient(45deg, #6a11cb 0%, #2575fc 100%);
  color: white;
  border: none;
  font-weight: bold;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease;

  &:hover {
    transform: translateY(-2px);
    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
    background: linear-gradient(45deg, #2575fc 0%, #6a11cb 100%);
  }

  &:active {
    transform: translateY(0);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  }
}

